--- a/src/ItsMavey/home/templates/index.html
+++ b/src/ItsMavey/home/templates/index.html
@@ -1,8 +1,68 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}ItsMavey{% endblock %}
 
 {% block extra_head %}
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="{% static 'home/css/style.css' %}">
+
+{% endblock %}
+
+{% block header %}
+
+    <h1>ItsMavey</h1>
+
+    <div class="buttons">
+        <a class="discord" href="https://discord.gg/SZ2remwSDv" target="_blank"><img
+                src=" {% static 'home/assets/discord.png' %}"
+                alt="">
+        </a>
+        <a class="twitch" href="https://twitch.tv/itsmavey" target="_blank"><img
+                src=" {% static 'home/assets/twitch.png' %}"
+                alt="">
+        </a>
+
+        <a class="tiktok" href="https://www.tiktok.com/@itsmavey" target="_blank"><img
+                src=" {% static 'home/assets/tiktok.png' %}"
+                alt="">
+        </a>
+
+    </div>
+
+{% endblock %}
+
+{% block main %}
+
+    <section class="about">
+        <h2>About</h2>
+        <p>Hey, I'm Mavey! I'm a variety streamer on Twitch. I play a lot of different games, but I'm mostly known for
+            my Minecraft content. I'm also a full-time student, so I stream when I can. I'm always looking for new games
+            to play and new people to meet, so feel free to stop by and say hi!</p>
+    </section>
+
+    <section class="games">
+        <h2>Games</h2>
+        <ul>
+            <li>
+                <a href="#">
+                    <div class="card">
+
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <div class="card">
+
+                    </div>
+                </a>
+        </ul>
+    </section>
+
+    <section class="merch">
+        <h2>Merch</h2>
+        <p>Coming soon!</p>
+    </section>
+
 {% endblock %}
