--- a/src/ItsMavey/static/css/style.css
+++ b/src/ItsMavey/static/css/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
+
+@font-face {
+    font-family: 'Shikumaru';
+    src: url('../assets/fonts/shikamaru.otf') format('opentype');
+}
+
 :root {
     --primary: #071A1F;
     --secondary: #183436;
@@ -91,11 +97,13 @@ nav ul li a {
 
 header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    flex-direction: column;
 
     width: 100%;
-    height: 100vh;
+    height: 92vh;
+
+    margin-top: 8vh;
 }
 
 #background-video {
