--- a/src/ItsMavey/templates/base.html
+++ b/src/ItsMavey/templates/base.html
@@ -57,11 +57,14 @@
             >
             </a>
 
+            <a href="https://www.youtube.com/@ItsMavey" target="_blank"><img
+                    src=" {% static '/assets/img/youtube.png' %}"
+                    alt=""
+                    draggable="false"
+            >
+            </a>
         </div>
     </nav>
-
-
-
 
     <header>
 
@@ -70,6 +73,7 @@
         </video>
 
         {% block header %}  {% endblock %}
+
     </header>
 
     <main>
@@ -79,7 +83,6 @@
     <footer>
 
     </footer>
-
 
     <script src="{% static 'js/main.js' %}"></script>
     {% block extra_js %}{% endblock %}
