--- a/src/ItsMavey/home/templates/index.html
+++ b/src/ItsMavey/home/templates/index.html
@@ -5,8 +5,8 @@
 
 {% block extra_head %}
 
-    <link rel="stylesheet" href="{% static 'home/css/header.css' %}">
-    <link rel="stylesheet" href="{% static 'home/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'home/css/home-header.css' %}">
+    <link rel="stylesheet" href="{% static 'home/css/home-style.css' %}">
 
 {% endblock %}
 
@@ -119,6 +119,6 @@ I mostly play games on stream, but I also code and listen to music.
 {% endblock %}
 
 {% block extra_js %}
-    <script src="{% static 'home/js/main.js' %}"></script>
+    <script src="{% static 'home/js/home-main.js' %}"></script>
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js"></script>
 {% endblock %}
